--- a/src/main.css
+++ b/src/main.css
@@ -47,10 +47,11 @@ ol, ul {
 .game {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 
-.game-info {
-  margin-left: 20px;
+.game-board {
+  margin: 0px 20px;
 }
 
 .game-info .highlight {
