--- a/src/main.css
+++ b/src/main.css
@@ -54,7 +54,14 @@ ol, ul {
   margin: 0px 20px;
 }
 
-.game-info .highlight {
-  font-weight: bold;
+.game-board .footer {
+  margin-top: 10px;
 }
 
+.game-right-panel li {
+  margin-bottom: 10px;
+}
+
+.game-right-panel .highlight {
+  background-color: lightgreen;
+}
